--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.4",
     "@supabase/supabase-js": "^2.42.5",
+    "bootstrap": "^4.6.2",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "supabase": "^1.162.4",
